# rustfunda

./: .gitignore  Cargo.toml
session01/: Cargo.toml  users.json
session01/authentication/: Cargo.toml
session01/authentication/src/: lib.rs
session01/login/: Cargo.toml
session01/login/src/: main.rs
session01/login_manager/: Cargo.toml
session01/login_manager/src/: main.rs
session01/variables/: Cargo.toml
session01/variables/src/: main.rs
session02/: Cargo.toml
session02/channels/: Cargo.toml
session02/channels/src/: main.rs
session02/dashing/: Cargo.toml
session02/dashing/src/: main.rs
session02/deadlocks/: Cargo.toml
session02/deadlocks/src/: main.rs
session02/divide-work/: Cargo.toml
session02/divide-work/src/: main.rs
session02/hello-thread/: Cargo.toml
session02/hello-thread/src/: main.rs
session02/hello_channels/: Cargo.toml
session02/parking/: Cargo.toml
session02/parking/src/: main.rs
session02/rayon_iters/: Cargo.toml
session02/rayon_iters/src/: main.rs
session02/rayon_scopes/: Cargo.toml
session02/rayon_scopes/src/: main.rs
session02/rwlocks/: Cargo.toml
session02/rwlocks/src/: main.rs
session02/scoped-threads/src/: main.rs
session02/shared-queue/: Cargo.toml
session02/shared-queue/src/: main.rs
session02/work-stealing/: Cargo.toml
session02/work-stealing/src/: main.rs
session02/workers/src/: main.rs
session03/: Cargo.toml
session03/async_channels/: Cargo.toml
session03/async_channels/src/: main.rs
session03/crossbeam_select/: Cargo.toml
session03/crossbeam_select/src/: main.rs
session03/errors/: Cargo.toml
session03/errors/src/: main.rs  myerrors.rs
session03/fileio/: Cargo.toml  warandpeace.txt
session03/fileio/src/: main.rs
session03/hello_async/: Cargo.toml
session03/hello_async/src/: main.rs
session03/hello_blocking/: Cargo.toml
session03/hello_blocking/src/: main.rs
session03/hello_tokio/: Cargo.toml
session03/hello_tokio/src/: main.rs
session03/keyevent_listener/: Cargo.toml
session03/keyevent_listener/src/: main.rs
session03/recursion/: Cargo.toml
session03/recursion/src/: main.rs
session03/rustclient/: Cargo.toml
session03/rustclient/src/: main.rs
session03/rustserver/: Cargo.toml
session03/rustserver/src/: main.rs
session03/tokio_select/: Cargo.toml
session03/tokio_select/src/: main.rs
session03/tokio_testing/: Cargo.toml
session03/tokio_testing/src/: lib.rs
session04/: Cargo.toml
session04/db/: .env  Cargo.toml
session04/db/migrations/: 20250630180139_initial.sql  20250630191401_more_messages.sql
session04/db/src/: main.rs
session04/logspan/: Cargo.toml
session04/seaormdb/: .env  Cargo.toml  database.db
session04/seaormdb/src/: main.rs
session04/seaormdb/src/entities/: user.rs
session04/thumbnail_server/: Cargo.toml
session04/thumbnail_server/src/: main.rs
session04/thumbs/: .env  Cargo.toml
session04/thumbs/_logs/: thumbs.2025-07-07  thumbs.2025-07-09
session04/thumbs/backend/migration/src/: lib.rs
session04/thumbs/backend/src/db/repositories/: image_repository.rs
session04/thumbs/data/: images.db
session04/thumbs/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_initial.rs
session04/thumbs/src/: main.rs
session04/thumbs/src/data/entities/: image.rs  mod.rs  tag.rs
session04/thumbs/src/data/repositories/: image_repository.rs  mod.rs  tag_repository.rs
session04/thumbs/src/db/: mod.rs
session04/thumbs/src/db/entities/: image.rs  image_tag.rs  mod.rs  tag.rs
session04/thumbs/src/db/repositories/: image_repository.rs  mod.rs  tag_repository.rs
session04/thumbs/src/entities/: image.rs  image_tag.rs  mod.rs  tag.rs
session04/thumbs/static/: about.md
session04/thumbs/web/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
session04/thumbs/web/react/: vite.config.ts
session04/thumbs/web/react/src/components/: Hero.tsx  ImageCard.tsx  ImageGrid.tsx  ImageModal.tsx  ImageUpload.tsx  TagFilter.tsx
session04/thumbs/web/react/src/pages/: About.tsx  Images.tsx
session04/thumbs/web/react/src/types/: index.ts
session04/thumbs/web/src/: App.tsx  index.css
session04/thumbs/web/src/components/: ImageCard.tsx  ImageGrid.tsx  ImageModal.tsx  ImageUpload.tsx  ImageWithFallback.tsx  Navigation.tsx  PortalDropdown.tsx  TagFilter.tsx
session04/thumbs/web/src/pages/: About.tsx  Home.tsx  Images.tsx
session04/thumbs/web/src/services/: api.ts
session04/thumbs/web/src/types/: index.ts
session04/thumbs/wwwroot/: index.html  style.css
session04/web_service/: Cargo.toml
session04/web_service/src/: main.rs
session04/web_service/src/www/: index.html
session04/web_service/wwwroot/: index.html  style.css
session05/collector/: Cargo.toml
session05/server/: .env  Cargo.toml
session05/server/migrations/: 20250825000001_initial.sql
session05/server/src/: main.rs  receiver.rs
session05/server/wwwroot/: collector.html  index.html
session05/shared_data/: Cargo.toml
util/: Cargo.toml
util/src/: auth.rs  byte_util.rs  datetime.rs  error.rs  io.rs  lib.rs  threading.rs
util/src/datetime/: mod.rs  unix.rs
util/src/io/: key_listener.rs  mod.rs
(+4 files in other folders)
