[package]
name = "rustfunda"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [ 
	"util",
	"session01", 
	"session01/authentication", 
	"session01/login", 
	"session01/login_manager", 
	"session01/variables",
	"session02",
	"session02/hello-thread",
	"session02/divide-work",
	"session02/scoped-threads",
	"session02/deadlocks",
	"session02/dashing",
	"session02/parking",
	"session02/rwlocks",
	"session02/hello_channels",
	"session02/workers",
	"session02/shared-queue",
	"session02/work-stealing",
	"session02/rayon_iters",
	"session02/rayon_scopes",
	"session03",
	"session03/hello_async",
	"session03/hello_tokio",
	"session03/hello_blocking",
	"session03/tokio_testing",
	"session03/errors",
	"session03/fileio",
	"session03/rustclient",
	"session03/rustserver",
	"session03/async_channels",
]
