[package]
name = "util"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
rpassword = "7"
bcrypt = "0"
fake = { version = "4", features = ["derive", "uuid", "time", "email_address"] }
rand = "0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
dialoguer = "0"
crossterm = "0"
tokio ={ version = "1", features = ["full"] }
