[package]
name = "thumbs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
axum = { version = "0", features = ["http2", "multipart"] }
tower = "0"
tower-http = { version = "0", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["alloc"]}
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
tracing-appender = "0"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"
dotenvy = "0"
futures = "0"
tokio-util = { version = "0", features = ["io"] }
image = "0"
chrono = { version = "0", features = ["serde"] }
async-trait = "0"
migration = { path = "./migration" }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"