[package]
name = "web_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
axum = "0"
tower = "0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["alloc"]}
tracing = "0"
tracing-subscriber = "0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }